--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -1,6 +1,6 @@
 body{
   margin: 0px;
-  padding: 0px;
+  padding: 0px! important;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -1272,12 +1272,124 @@ box-shadow: 1px 1px 8px 1px #00000052;
 
 
 /* charttable page css open here */
-
+.range-list{
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+}
 .wrp-charttable{
   color: #000;
-  padding: 20px 2% 20px 2%;
+  padding: 0px 2% 20px 2%;
 }
+.range-content-wrp{
+  display: flex;
+  justify-content: space-between;
+}
+.modal-box-wrp {
+  max-width: 48%;
+}
+.range-c-child1 > p{
+  font-size: 17px;
+    color: #000;
+    font-weight: 500;
+}
+.range-c-child2{
+  width: 60%;
+}
+.range-c-child2 > span{
+  width: 100%;
+}
+.range-c-child2 > input{
+  display: inline-block;
+    width: 100%;
+    outline: none;
+    color: #000;
+    font-size: 14px;
+    border: 2px solid #c867c6;
+    border-radius: 8px;
+    padding: 8px 15px;
+    box-shadow: 1px 1px 8px 1px #00000029;
+}
+.wrp-axis{
+  display: flex;
+  justify-content: space-between;
+}
+.min-axis{
+  width: 50%;
+  border: 2px solid #c867c6;
+  border-radius: 8px;
+  padding: 6px 15px;
+  margin-right: 20px;
+}
+.max-axis{
+  width: 50%;
+  border: 2px solid #c867c6;
+  border-radius: 8px;
+  padding: 6px 15px;
+}
+.min-axis > input{
+  display: inline-block;
+  border: none;
+  width: 75%;
+}
+.max-axis > input{
+  display: inline-block;
+  border: none;
+  width: 75%;
+}
+.range-c-child1,.range-c-child2{
+  align-self: center;
+}
+.modal-header{
+  background-color: #800080;
+}
+.modal-title{
+  color: #fff;
+}
+.modal-title > span{
+  font-weight: 500! important;
+}
+.modal-box-wrp > .modal-content .modal-header > button > span{
+  color: #fff;
+}
+.range-c-child2 > p > input{
+  width: 18px;
+  height: 18px;
+  position: relative;
+  top: 3px;
+}
+.modal-box-wrp .modal-content > .modal-header{
+  padding: 12px 10px! important;
 
+}
+.range-c-child2 > p > label{
+  display: inline-block;
+  margin-top: -10px;
+    margin-left: 8px;
+    font-weight: 500;
+    font-size: 15px;
+    color: #000;
+}
+.mrl-input{
+  margin-left: 15px;
+}
+.range-c-child2 > p > input[type=radio]:checked ~ .check {
+  border: 5px solid #0DFF92! important;
+}
+.range-list > li{
+  margin-top: 15px;
+}
+.raw-pcos{
+  background-color: #e8ecef;
+  border: 2px solid #c867c6;
+    border-radius: 8px;
+    padding: 6px 15px;
+    box-shadow: 1px 1px 8px 1px #00000029;
+}
+.raw-pcos > p{
+  color: #000;
+  font-size: 17px;
+}
 /* charttable page css closed here */
 
 /* chartheader css open here */
@@ -1403,9 +1515,36 @@ box-shadow: 1px 1px 8px 1px #00000052;
   background-color: #ccc !important;
     cursor: no-drop!important;
 }
-
+.chart-w{
+    border: 2px solid #ce67cc;
+    border-radius: 4px;
+    box-shadow: 0px 0px 8px #00000054;
+    margin: 15px 0px 0px 0px;
+    position: relative! important;
+}
 .chart-w > div{
   height: 100%! important;
+}
+.top-filter{
+  position: absolute! important;
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  top: 5px;
+  right: 15px;
+  z-index: 10;
+  display: flex;
+}
+.top-filter > li > a{
+  display: inline-block;
+  border: 1px solid #800080;
+  padding: 0px 6px;
+  border-radius: 4px;
+  margin-left: 10px;
+}
+.top-filter > li > a > i{
+  font-size: 11px;
+  color: #000;
 }
 .chart-w > div > div{
   height: 100%! important;
@@ -1413,7 +1552,9 @@ box-shadow: 1px 1px 8px 1px #00000052;
 .plot-charts{
   width: 100%! important;
 }
-
+.modebar{
+  display: none! important;
+}
 .MuiIconButton-root:hover{
   outline: none;
 }
@@ -1441,3 +1582,27 @@ box-shadow: 1px 1px 8px 1px #00000052;
 }
 }
 /* login loader css */
+
+
+/* popop css open here */
+.modal-content{
+  border: 3px solid #4847a3;
+  box-shadow: 1px 1px 8px 1px #00000052;
+}
+
+.modal-p > p{
+  color: green;
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.modal-error-p > p{
+  color: red;
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+/* popop css closed here */
+
