--- a/src/components/css/style1.css
+++ b/src/components/css/style1.css
@@ -13,13 +13,25 @@
     
 }
 .action-list2{
-    margin-left: 10px;
-    margin:auto;
-    justify-content: space-between;
     margin: 0px;
     padding: 0px;
     list-style: none;
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
+    margin-left: 15px;
+    margin-right: 15px;
+    
+}
+
+.fa-upload,.fa-file-pdf-o,.fa-table,.fa-question-circle,.fa-clock-o{
+    color: #fff !important;
+}
+.files {
+    margin: 10px;
+    width:50%; 
+    margin-left: 8rem;
+
 
 }
+
+
