--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -2160,3 +2160,174 @@ sub {
   animation-delay: 2.5s;
 }
 
+
+/* assembly report page css open here */
+.assembly-box{
+  border: 2px solid #c867c6;
+    border-radius: 8px;
+    padding: 20px 15px;
+    box-shadow: 1px 1px 8px 1px #00000029;
+}
+.assembly-content > h3 {
+  font-size: 22px;
+  font-weight: 600;
+  color: #000;
+}
+.assembly-content > p{
+  color: #000;
+  font-size: 15px;
+  margin-top: 15px;
+}
+.assembly-list{
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  margin-top: 30px;
+}
+.assembly-list > li > p{
+  color: #000;
+  font-size: 15px;
+  font-weight: 500;
+  margin-top: 5px;
+}
+.checkbox-assemblylist{
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  margin-top: 30px;
+}
+.checkbox-assemblylist > li > p{
+  color: #000;
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 5px;
+}
+.flowing-paragraph{
+  color: #000;
+  font-size: 15px;
+  margin-top: 20px;
+}
+.assembly-btn-wrp{
+  display: flex;
+  width: 100%;
+  margin-top: 30px;
+}
+.assembly-btn > a{
+  display: inline-block;
+  border-radius: 6px;
+  padding: 8px 15px;
+  font-size: 15px;
+  color: #fff;
+  text-align: center;
+  background-color: #800080;
+  box-shadow: 1px 1px 8px 1px #00000029;
+}
+.mrl-pdf{
+  margin-left: 20px;
+}
+.client-names-wrp{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.report-input > label{
+  font-size: 14px;
+  color: #000;
+}
+.report-input > input{
+  display: block;
+  width: 100%;
+  border: 1px solid #c867c6;
+  border-radius: 4px;
+  padding: 7px 15px;
+  font-size: 14px;
+  color: #000;
+  box-shadow: 1px 1px 8px 1px #00000029;
+  margin-top: 5px;
+}
+.text-areat-report{
+  margin-top: 20px;
+}
+.text-areat-report > label{
+  font-size: 14px;
+  color: #000;
+}
+
+.text-areat-report > textarea{
+  display: block;
+  width: 100%;
+  border: 1px solid #c867c6;
+  border-radius: 4px;
+  padding: 7px 15px;
+  font-size: 14px;
+  color: #000;
+  height: 150px;
+  box-shadow: 1px 1px 8px 1px #00000029;
+  margin-top: 5px;
+}
+.assembly-btn-wrp2{
+  width: 100%! important;
+  position: fixed;
+  bottom: 0;
+  background-color: #fff;
+  padding: 10px 0px 15px 0px;
+}
+.live-section-img{
+  margin-top: 25px;
+}
+.live-section-img > label{
+  font-size: 14px;
+  color: #000;
+}
+.live-section-img > img{
+  width: 100%;
+  margin-top: 15px;
+}
+.report-notes{
+  margin-top: 25px;
+}
+.report-notes > label{
+  font-size: 14px;
+  color: #000;
+}
+.report-notes > p{
+  font-weight: 600;
+  color: #000;
+  border: 1px solid #000;
+  font-size: 15px;
+  margin-top: 10px;
+  padding: 5px 15px;
+}
+.interview-checklist{
+  margin-top: 25px;
+}
+.interview-checklist > label{
+  font-size: 14px;
+  color: #000;
+}
+.interview-checklist > img{
+  width: 100%;
+  margin-top: 15px;
+}
+.assessment-record{
+  margin-top: 20px;
+}
+.assessment-record > img{
+  width: 100%;
+  margin-top: 15px;
+}
+.live-section-img > label{
+  display: inline-block;
+  margin-bottom: 10px;
+}
+.ml-assembly{
+  margin-left: 60px;
+}
+.complete-forms{
+  margin: 0px;
+  font-size: 16px;
+  margin-top: 30px;
+  margin-bottom: -15px;
+}
+/* assembly report page css closed here */
+
