--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -2356,3 +2356,58 @@ sub {
 }
 /* assembly report page css closed here */
 
+
+/* .ex-chart{
+    text-align: center;
+    color: #800080;
+    margin-top: 10rem;
+ 
+} */
+
+.uploadfile{
+  text-align: center;
+  margin-top: 5rem;
+  height: 10px;
+  
+}
+.action-list2{
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 10px;
+  margin-right: 10px;
+  
+}
+
+.fa-upload,.fa-file-pdf-o,.fa-table,.fa-question-circle,.fa-clock-o,.fa-download,.fa-file-text{
+  color: #fff !important;
+}
+.files {
+  margin: 10px;
+  width:50%; 
+  margin-left: 36rem;
+}
+.buttonstyle {
+  border-color: #800080;
+  color: #800080;
+  background-color: transparent;
+  border: 1px solid #800080;
+  margin-left: 9rem;
+}
+
+.create-list-box1 {
+  display: inline-block;
+  width: 100%;
+  color: #000;
+  font-size: 14px;
+  border: 2px solid #c867c6;
+  border-radius: 8px;
+  padding: 10px 15px;
+  box-shadow: 1px 1px 8px 1px #00000029;
+}
+
+.need-{
+  color: #800080 !important;
+}
