--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -2192,6 +2192,7 @@ sub {
     border-radius: 8px;
     padding: 20px 15px;
     box-shadow: 1px 1px 8px 1px #00000029;
+    margin-bottom: 30px;
 }
 .assembly-content > h3 {
   font-size: 22px;
@@ -2295,7 +2296,7 @@ sub {
   position: fixed;
   bottom: 0;
   background-color: #fff;
-  padding: 10px 0px 15px 0px;
+  padding: 10px 0px 10px 0px;
 }
 .live-section-img{
   margin-top: 25px;
