--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -1252,14 +1252,21 @@ box-shadow: 1px 1px 8px 1px #00000052;
 
 }
 .choose-signals{
-  background-color: #800080;
+  background-color: #80008000;
+  border: 2px solid #c867c6;
   padding: 10px 20px;
   border-radius: 4px;
   text-align: center;
+  margin-bottom: 5px;
 }
 .choose-signals > p{
-  color: #fff;
+  color: #800080;
+  font-weight: 600;
   font-size: 15px;
+}
+.custom-flexs{
+  display: flex;
+  margin-top: 10px;
 }
 /* creategroupsetionreport page css closed here */
 
@@ -1283,10 +1290,11 @@ box-shadow: 1px 1px 8px 1px #00000052;
   font-size: 14px;
   color: #000;
   margin-top: 4px;
-  margin-left: 20px;
+  margin-left: 15px;
 }
 .signals-list > li{
   border-bottom: 1px solid #c867c6;
+  padding-bottom: 10px;
 }
 .mrt-sessions{
   margin-top: 30px;
