--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -2373,7 +2373,7 @@ sub {
  
 } */
 
-.uploadfile{
+/* .uploadfile{
   text-align: center;
   margin-top: 5rem;
   height: 10px;
@@ -2419,4 +2419,4 @@ sub {
 
 .need-{
   color: #800080 !important;
-}
+} */
