--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -119,6 +119,10 @@ h3{
   transition: 0.5s;
 }
 
+.handle{
+  cursor: move;
+}
+
 .border-b{
   position: absolute;
   padding: 10px 30px 10px 30px;
