--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -1001,6 +1001,9 @@ b, strong {
 .filter-mrb{
   margin-bottom: 20px;
 }
+.plus-icon > i{
+  color: #800080;
+}
 .edit-input > input{
   display: inline-block;
   width: 100%;
